# Co-founder_test_project

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/: auth_utility.py  celery_app.py  config.py  database.py  main.py  models.py  tasks.py  views.py
app/migrations/models/: 0_20260512081610_init.py  1_20260512162318_update.py  2_20260512222709_update.py
