[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.fastapi]
entrypoint = "app.main:app"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.aerich]
tortoise_orm = "app.database.TORTOISE_ORM"
location = "./app/migrations"
src_folder = "./."
